		* removed javascript-tag in header of public sites like login and password tpls, they don't use it: less code + less HTTP requests -> less traffic -> less log-entries
	- GUI:
		* typos in some php files and some code cleanup

2009-02-09 Benedikt Heintel
	- CONFIGS:
		* Release preparation
	- DOCU:
		* Updated for ispCP ω 1.0.0
	- ENGINE:
		* Fixed #1656: small typo in engine/setup/ispcp-update introduced in r1479 (Thanks Haeber)
		* Updated update script
	- LANGUAGES:
		* Updated Russian
	- THEMES:
		* Fixed #1655: there is still a style error in reseller/settings_layout.tpl. height-attributes in css-styles need explicit units like px. (Thanks Haeber)
	- TOOLS:
		* phpmyadmin: Small fixes in css file

2009-02-09 Daniel Andreca
	- GUI:
		* Fixed #1649: Able to login to pma after session times out
	- THEMES:
		* Fixed #1646: Tiny html special char encoding problem in include/admin-functions.php (Thanks Haeber)
		* Fixed #1652: Html structure/tree failure in admin/settings_layout.tpl and reseller/settings_layout.tpl
		* Fixed #1653: Lost font-tag in reseller/user_add2.tpl (Thanks Haeber)
		* Fixed #1654: Small style fix for bug introduced with r1476 in admin/settings_layout.tpl and reseller/settings_layout.tpl (Thanks Haeber)
		* Fixed #1651: Template variable {DST_RSL_SELECTED} in admin/manage_reseller_users.php is not replaced
	- CONFIGS:
		* Fixed #1602: Awstats images (icons/graphs) don't work on gentoo (and maybe others?)
	- ENGINE:
		* Fixed #1614: RC7 update script: addressbooks are not migrated

2009-02-08 Daniel Andreca
	- THEMES:
		* Fixed #1646: Tiny html special char encoding problem in include/admin-functions.php (Thanks Haeber)
		* Fixed #1647: Two template fixes (Thanks Haeber)
		* Fixed #1609: RC7 update script: ns.domain.tld missing from bind templates

2009-02-07 Daniel Andreca
	- THEMES:
		* Fixed #1642: Some html problems in reseller/admin statistics (Thanks Haeber)